// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stack renders dividers when instructed to do so: dividers="regular" 1`] = `
<div
  class="box"
  data-testid="stack"
>
  <div>
    one
  </div>
  <hr
    class="divider box"
  />
  <div>
    two
  </div>
  <hr
    class="divider box"
  />
  <div>
    three
  </div>
</div>
`;

exports[`Stack renders dividers when instructed to do so: dividers="strong" 1`] = `
<div
  class="box"
  data-testid="stack"
>
  <div>
    one
  </div>
  <hr
    class="divider weight-strong box"
  />
  <div>
    two
  </div>
  <hr
    class="divider weight-strong box"
  />
  <div>
    three
  </div>
</div>
`;

exports[`Stack renders dividers when instructed to do so: dividers={true} 1`] = `
<div
  class="box"
  data-testid="stack"
>
  <div>
    one
  </div>
  <hr
    class="divider box"
  />
  <div>
    two
  </div>
  <hr
    class="divider box"
  />
  <div>
    three
  </div>
</div>
`;
